--- a/app/globals.css
+++ b/app/globals.css
@@ -27,14 +27,7 @@ body {
     margin-left: 0.5vw;
     border-radius: 10px;
 }
-button{
-    font-size: 1.3rem;
-    width: 2vw;
-    color: white;
-    background-color: blue;
-    border: none;
-    border-radius: 20%;
-}
+
 .sug{
     color: white;
     position: absolute;
@@ -103,6 +96,13 @@ button{
         justify-content: space-between;
     }
 }
+.footer{
+    display: flex;
+    width: 100%;
+    height: 20vw;
+    background-color: rgb(46, 45, 45);
+    color: white;
+}
 .main{
     background-color: white;
     display: flex;
@@ -134,5 +134,22 @@ button{
         display: flex;
         width: 100%;
         justify-content: space-between;
+    }
+}
+.container{
+    width: auto;
+    display: flex;
+    align-items: center;
+    margin-top: 2vw;
+    button{
+        background-color: black;
+        opacity: 35%;
+        width: 2vw;
+        height: 2vw;
+        color: white;
+        border-radius: 100%;
+    }
+    button:hover{
+        opacity: 20%;
     }
 }
