--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ body {
     display: flex;
 }
 
-.map{
+.Map{
     position: fixed;
     width:100%;
     height: 100vh;
@@ -18,7 +18,7 @@ body {
     position: absolute;
     z-index: 2;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 20vw;
     height: 5vw;
@@ -79,7 +79,7 @@ body {
     align-items: center;
     background-color: #026900;
     width: 100%;
-    height: 5vw;
+    height: 8%;
     position: fixed;
     z-index:  3;
     justify-content: space-between;
@@ -90,16 +90,20 @@ body {
     }
     .cate{
         display: flex;
-        width: 7vw;
-        margin-left: 1vw;
-        margin-right: 1vw;
+        width: 7%;
+        margin-left: 1%;
+        margin-right: 1%;
         justify-content: space-between;
+    }
+    img:hover{
+        background-color: #058802;
+        border-radius: 25%;
     }
 }
 .footer{
     display: flex;
     width: 100%;
-    height: 20vw;
+    height: 15vw;
     background-color: rgb(46, 45, 45);
     color: white;
 }
@@ -114,7 +118,7 @@ body {
     border-top-left-radius:3vw;
     border-top-right-radius: 3vw;
     z-index: 2;
-    margin-top: 50%;
+    margin-top: 44%;
     .img{
         margin-top: 1%;
     }
@@ -153,3 +157,123 @@ body {
         opacity: 20%;
     }
 }
+
+.classic{
+    display: flex;
+    flex-direction: column;
+    margin-top: 2%;
+}
+
+.Mapcard{
+    width: 30vw;
+    height: 20vw;
+    border-radius: 2vw;
+    margin-bottom: 1%;
+}
+
+.baniere{
+    z-index: 1;
+    width: 100%;
+    height: 15%;
+    position: absolute;
+}
+
+.profilpic{
+    border-radius: 100%;
+    position: absolute;
+}
+
+.card{
+    z-index: 2;
+    margin-top: 4.5%;
+    margin-left: 2%;
+    
+    .roundedgray {
+        border-top: 2px solid #B1B1B1;
+        border-radius: 5px;
+        width: 95%;
+        align-self: center;
+        margin-bottom: 1%;
+        margin-top: 1%;
+    }
+}
+.cardcontenant{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 3.5%;
+}
+
+.roundedblack {
+    border-top: 2px solid rgb(0, 0, 0);
+    border-radius: 5px;
+    width: 95%;
+    align-self: center;
+}
+
+.roundedv {
+    border-left: 2px solid #B1B1B1;
+    border-radius: 5px;
+    height: 80%;
+    align-self: center;
+    
+}
+
+.cardsection{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    p{
+        max-width: 40%;
+    }
+    h1{
+        font-size: 1.5vw;
+        font-weight: bold;
+    }
+}
+
+.produit{
+    width: 95%;
+    height: auto;
+    min-height: 30%;
+    display: flex;
+    background-color: #F0F0F0;
+    border-radius: 2vw;
+    margin-left: 2.5%;
+    margin-top: 3%;
+}
+
+.description{
+    display: flex;
+    flex-direction: column;
+    width: 55%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    h1{
+        font-size: 1vw;
+        font-weight: bold;
+    }
+}
+
+.block{
+    display: flex;
+    margin-top: 2%;
+    height: 70%;
+    justify-content: space-around;
+    align-items: center;
+    .text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+        height: 100%;
+    }
+    img{
+        width: 20%;
+        height: auto;
+        border-radius: 2vw;
+    }
+}
+
